fix flickering of anchors in the sidebar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -270,7 +270,7 @@ h1.indexTopBar {
 }
 
 input:checked + .dis-en {
-  background-color: var(--accent);
+  background-color: var(--coffee-medium);
   content: "yay";
 }
 
@@ -309,6 +309,7 @@ h4 {
   top: 75px;
   bottom: 0;
   overflow-y: auto; /* Enable scroll if needed */
+  overflow-x: hidden;
   box-shadow: 4px 0 20px rgba(60, 42, 33, 0.2);
   transition: transform 0.3s ease; /* Smooth transition */
   transform: translateX(
@@ -336,7 +337,6 @@ h4 {
 #sidebar a:hover {
   background-color: var(--accent);
   color: var(--coffee-dark);
-  transform: translateX(5px);
 }
 
 #sidebar a.active {
